# MeusCursos

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py  tmpclaude-4477-cwd
backend/app/api/: courses.py  imports.py  lessons.py  modules.py  notes.py  router.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  base.py  course.py  lesson.py  module.py  note.py
backend/app/schemas/: __init__.py  course.py  lesson.py  module.py  note.py
backend/app/services/: course_service.py  google_drive_service.py  lesson_service.py  local_import_service.py  minio_service.py  module_service.py  note_service.py  notion_service.py  youtube_service.py
backend/tests/: conftest.py  test_api_courses.py  test_api_lessons.py  test_api_notes.py  test_api_notion.py  test_api_video.py  test_models.py
frontend/: Dockerfile  FRONTEND.md  index.html  package-lock.json  package.json  tmpclaude-ea19-cwd  vite.config.ts
frontend/src/: index.css
frontend/src/components/: ContinueWatchingCard.tsx  CourseCard.tsx  Header.tsx  VideoPlayer.tsx
frontend/src/lib/: storage.ts
frontend/src/pages/: AdminCourses.tsx  Index.tsx  WatchCourse.tsx
frontend/src/types/: course.ts
